# code2prompt-mcp

./: MCP_INSTALLATION_GUIDE.md  README.md  latest_context.txt  pyproject.toml  smithery.yaml
src/code2prompt_mcp/: main.py
tests/: test_ask_gemini_question.py  test_get_context_for_gemini.py
