[project]
name = "code2prompt-mcp"
version = "0.1.0"
description = "MCP server for Code2Prompt"
authors = [
    { name = "Olivier D'Ancona", email = "olivier.dancona@master.hes-so.ch" },
]
dependencies = [
    "mcp>=1.4.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "colorlog>=6.9.0",
    "code2prompt-rs>=3.2.1",
    "google-genai>=0.8.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/code2prompt_mcp"]
